--- a/OverwatchProximityChat.Client/OverwatchProximityChat.Client.csproj
+++ b/OverwatchProximityChat.Client/OverwatchProximityChat.Client.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64</Platforms>
+    <StartupObject>OverwatchProximityChat.Client.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,7 +19,13 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client" Version="2.62.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="NetCoreServer" Version="8.0.7" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.1-dev-00077" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972" />
     <PackageReference Include="SharpHook" Version="5.3.2" />
   </ItemGroup>
 
