--- a/OverwatchProximityChat.API/OverwatchProximityChat.API.csproj
+++ b/OverwatchProximityChat.API/OverwatchProximityChat.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,10 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	<SliceCompile Include="MumbleServer.ice" />
+    <PackageReference Include="zeroc.ice.net" Version="3.7.10" />
+    <PackageReference Include="zeroc.icebuilder.msbuild" Version="5.0.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OverwatchProximityChat.Shared\OverwatchProximityChat.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="generated\" />
+  </ItemGroup>
 </Project>
